--- a/Bukkit/src/main/resources/settings.yml
+++ b/Bukkit/src/main/resources/settings.yml
@@ -34,12 +34,12 @@ Settings:
   # |Update| This function lets you know if there is a plugin update [Does not disable console messages]
   Update: true
 
-  # |Use-Default-Prefix| if it is true it will use the prefix of the plugin itself, but if it is false it will use the prefix that you define in [Prefix: 'my server']
+  # |Use-Default-Prefix| if it is true it will use the prefix of the plugin itself, but if it is false it will use the prefix that you define in [Prefix: "my server"]
   # if you want to use a custom prefix, this function should be set to [false]
   Use-Default-Prefix: true
 
   # |Prefix| here you can define a custom prefix
-  Prefix: '&6[&bMy Server&6]&7'
+  Prefix: "&6[&bMy Server&6]&7"
 
   # |Show-Chat-In-Console| here you can enable or disable the chat to be seen in the console
   Show-Chat-In-Console: false
@@ -51,22 +51,26 @@ MySQL:
 
   # |Table| this is where you will find the name of the table that will be created or used to obtain the data
   # [Note]: it is not recommended to change this
-  Table: 'advancedchat_data'
+  Table: "advancedchat_data"
 
-  # |Host| this is where you should put the database host
-  Host: 'localhost'
+  # | Driver | this is where you will find the name of the table that will be created or used to obtain the data
+  # [Note]: it is not recommended to change this
+  Driver: ""
 
-  # |Port| this is where you should put the database port
-  Port: '3306'
+  # | Host | this is where you should put the database host
+  Host: "localhost"
 
-  # |Database| this is where you should put the name of the database
-  Database: 'advancedchatDB'
+  # | Port | this is where you should put the database port
+  Port: "3306"
 
-  # |User| this is where you should put the database username
-  Username: 'root'
+  # | Database | this is where you should put the name of the database
+  Database: "advancedchatDB"
 
-  # |Password| this is where you should put the database password
-  Password: '123456'
+  # | Username | this is where you should put the database username
+  Username: "root"
+
+  # | Password | this is where you should put the database password
+  Password: "none"
 
 #
 # | Hooks | Here are all the configurations of the plugin implementations and more
@@ -101,7 +105,7 @@ Hooks:
     Enabled: true
 
     # |Channel-ID| Here is the id of the channel that is used for the chat
-    Channel-ID: 'none'
+    Channel-ID: "none"
 
   # |EssentialsDiscord| Here you can define the discord channel where the messages from minecraft to discord are seen
   # !This characteristic is in the experimental phase!
@@ -111,7 +115,7 @@ Hooks:
     Enabled: true
 
     # |Channel-ID| Here is the id of the channel that is used for the chat
-    Channel-ID: 'none'
+    Channel-ID: "none"
 
 #
 # | ChatFormat |
@@ -121,19 +125,28 @@ ChatFormat:
   Enabled: true
 
   # |Chat-Type|
-    # [default] It will use the plugin's color customization but the HoverEvent and ClickEvent cannot be used
+    # [default] It will use the plugin color customization but the HoverEvent and ClickEvent cannot be used
     # For more information see the advancedchat wiki: https://jonagamerpro1234.gitbook.io/advancedchat/
     # [normal] use the chat defined in [Chat]
     # [group] use the chat defined in the group found inside the [groups.yml] file
   Chat-Type: normal
 
   # | Format-Type |
-    # [normal] It is the normal format to use the plugin, and it will use the plugin's own method to send the message, it is possible that the plugin is incompatible with other plugins
-    # [json] The json format will allow a better customization of the chat and will use another method to send the messages. It is not recommended to use this format if you don't know how to use json!
+    # [normal] It is the normal format to use the plugin's, and it will use the plugin's own method to send the message, it is possible that the plugin is incompatible with other plugins
+    # [json] The json format will allow a better customization of the chat and will use another method to send the messages. It is not recommended to use this format if you don"t know how to use json!
   Format-Type: normal
 
   # |Format| Here you define the chat format for all players.
-  Format: '&b{player_name} &8> {message_chat}'
+  Format: "&b{player_name} &8> {message_chat}"
+
+  # | Format |
+  Range-Chat:
+
+    # |Enabled| Here you can enable or disable this feature
+    Enabled: true
+
+    # | Max-Range |
+    Max-Range: 10
 
   # |HoverEvent| This section allows you to modify the hover events in the chat
   HoverEvent:
@@ -143,9 +156,9 @@ ChatFormat:
 
     # |Hover| This section allows you to define the hover text
     Hover:
-      - '&6> &aHello &b<name>'
-      - '&6> &e%player_exp_to_level%'
-      - '&6> &dadd more lines like these'
+      - "&6> &aHello &b<name>"
+      - "&6> &e%player_exp_to_level%"
+      - "&6> &dadd more lines like these"
 
   # |ClickEvent| This section allows you to modify chat click events
   ClickEvent:
@@ -160,28 +173,28 @@ ChatFormat:
     Actions:
 
       # |Command| Clicking on the chat will execute the command defined in the config
-      Command: '/say <name> hello server'
+      Command: "/say <name> hello server"
 
       # |Url| Clicking on the chat opens a link
-      Url: 'https://jonagamerpro1234.gitbook.io/advancedchat/'
+      Url: "https://jonagamerpro1234.gitbook.io/advancedchat/"
 
       # |Suggest-Command| Clicking on the chat suggests a command that you define in the config
-      Suggest-Command: '/msg <name>'
+      Suggest-Command: "/msg <name>"
 
   # |Private-Message|
   Private-Message:
 
     # |Send-Format|
-    Send-Format: '&e[S] &8-> &a<send_name>&8: &7<msg>'
+    Send-Format: "&e[S] &8-> &a<send_name>&8: &7<msg>"
 
     # |Receive-Format|
-    Receive-Format: '&a[R] &8-> <receive_name>&8: &7<msg>'
+    Receive-Format: "&a[R] &8-> <receive_name>&8: &7<msg>"
 
     # |Receive-Server-Format|
-    Receive-Server-Format: '&6[&bServer&6] &a[R] &8-> <receive_name>&8: &7<msg>'
+    Receive-Server-Format: "&6[&bServer&6] &a[R] &8-> <receive_name>&8: &7<msg>"
 
   # |Debug-Format| It is a chat that will be activated when the configuration contains an error
-  Debug-Format: '&b[&cError in Config&b] &f<&f<player>&f> &f<message>'
+  Debug-Format: "&b[&cError in Config&b] &f<&f<player>&f> &f<message>"
 
 #
 # | ClearChat |
@@ -222,16 +235,16 @@ Command-Blocker:
 
     # |Command-List| In this list you can define which commands cannot be used by players in general including your server staff
     Command-List:
-      - '/plugins'
-      - '/pl'
-      - '/?'
-      - '/ver'
-      - '/version'
-      - '/bukkit:version'
-      - '/bukkit:pl'
-      - '/bukkit:plugins'
-      - '/bukkit:ver'
-      - '/bukkit:?'
+      - "/plugins"
+      - "/pl"
+      - "/?"
+      - "/ver"
+      - "/version"
+      - "/bukkit:version"
+      - "/bukkit:pl"
+      - "/bukkit:plugins"
+      - "/bukkit:ver"
+      - "/bukkit:?"
 
   # |Mute| here you will find all the command block functions for muted players
   Mute:
@@ -241,10 +254,10 @@ Command-Blocker:
 
     # |Command-List| In this list you can define which commands the silenced players cannot use
     Command-List:
-      - '/tell'
-      - '/me'
-      - '/say'
-      - '/msg'
+      - "/tell"
+      - "/me"
+      - "/say"
+      - "/msg"
 
 #
 # | TabComplete |
@@ -261,10 +274,10 @@ TabComplete:
 
     # |list|
     List:
-      - 'Msg'
-      - 'Me'
-      - 'Say'
-      - 'List'
+      - "Msg"
+      - "Me"
+      - "Say"
+      - "List"
 
 #
 # |Filter Chat|
@@ -278,7 +291,7 @@ Filter-Chat:
   Enabled: true
 
   # |Message| here you can define a personalized message that will be sent to the player
-  Message: '&eyou cannot use this word, it is blocked!'
+  Message: "&eyou cannot use this word, it is blocked!"
 #
 # | Mention |
 Mention:
@@ -287,10 +300,10 @@ Mention:
   Enabled: true
 
   # |Send-Format|
-  Send-Format: '&b[&aS&b]&8: &e<name> &9-> &e[&d<name>&e]'
+  Send-Format: "&b[&aS&b]&8: &e<name> &9-> &e[&d<name>&e]"
 
   # |Receive-Format|
-  Receive-Format: '&b[&eR&b]&8: &e[&a<name>&e] &9-> &d<name>'
+  Receive-Format: "&b[&eR&b]&8: &e[&a<name>&e] &9-> &d<name>"
 
   # |Sound| In this section you can configure the sound of the mentions
   Sound:
@@ -318,10 +331,12 @@ ChatLog:
 
   Chat:
 
+    # |Enabled| Here you can enable or disable this feature
     Enabled: true
 
   Commands:
 
+    # |Enabled| Here you can enable or disable this feature
     Enabled: true
 
     #add ignore command add in the log file
