--- a/Bukkit/pom.xml
+++ b/Bukkit/pom.xml
@@ -109,7 +109,7 @@
         <dependency>
             <groupId>com.github.seeseemelk</groupId>
             <artifactId>MockBukkit-v1.19</artifactId>
-            <version>2.133.0</version>
+            <version>2.133.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -137,9 +137,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.spongepowered</groupId>
-            <artifactId>configurate-yaml</artifactId>
-            <version>4.1.2</version>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
