added old AdvancedChat 1.6.0 project for bug fixes

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>AdvancedChat 1.6.x Bug Fix</module>
         <module>Bukkit</module>
         <module>Bungee</module>
         <module>AdvancedChatOld</module>
