--- a/AdvancedChatOld/src/main/resources/oldfiles/player-gui.yml
+++ b/AdvancedChatOld/src/main/resources/oldfiles/player-gui.yml
@@ -3,11 +3,14 @@
 #   / /| |/ /      By jonagamerpro1234
 #  / ___ / /___    Version 1.7.0
 # /_/  |_\____/    Thanks for using AdvancedChat <3
-#  
+#
+#
 Title: '&b&lMenu &8&l> &e&lPlayer'
+
 Especial-Items:
   Mute:
-    Name: '&bPlayer is &6[<is_mute>&6]'
+    Name: '&bPlayer is &6[{Is_Mute}&6]'
+
 Items:
   Next:
     Name: '&a&lNext Menu'
