--- a/AdvancedChat 1.6.x Bug Fix/src/main/resources/config.yml
+++ b/AdvancedChat 1.6.x Bug Fix/src/main/resources/config.yml
@@ -1,31 +1,32 @@
 #     ___   ______
 #    /   | / ____/ 
 #   / /| |/ /      By jonagamerpro1234
-#  / ___ / /___    Version 1.6.0
+#  / ___ / /___    Version ${project.version}
 # /_/  |_\____/    Thanks for using AdvancedChat <3
-#  
-# ● a simple plugin that helps you customize your server chat to make it look better also provides a customizable chat system by group or rank
-#  
+#
+# ● AdvancedChat is an easy to use plugin that will help you customize the chat on your server to make it look its best. It will also have a customization system by groups and among other functions more...
+#
 # ● Spigot: https://www.spigotmc.org/resources/advancedchat-1-7-x-1-17-x.83889/
 # ● Songoda: https://songoda.com/marketplace/product/advancedchat-chat-related.542
 # ● Wiki [Working Progress]: https://jonagamerpro1234.gitbook.io/advancedchat/
 # ● Discord: https://discord.gg/c5GhQDQCK5
 # ● Issue Tracker: https://github.com/jonagamerpro1234/AdvancedChat/issues
-# ● Plugin Statistics: https://bstats.org/plugin/bukkit/AdvancedChat/8826
-#
+# ● Bstast: https://bstats.org/plugin/bukkit/AdvancedChat/8826
+
+
+
 Settings:
   
-  # |Config-Version| I would not change anything
-  Config-Version: 1
+  # I would not change anything
+  Config-Version: 2
   
-  # |Update| This function lets you know if there is a plugin update [Does not disable console messages]
+  # The notification of updates will be disabled if it is false this only disables the notifications when entering the server,
+  # if it is true a notification will be sent if there is an update available
+  # Permission: advancedchat.update
   Update: true
-  
-  # |Use-Default-Prefix| if it is true it will use the prefix of the plugin itself, but if it is false it will use the prefix that you define in [Prefix: 'my server']
-  Use-Default-Prefix: true
-  
-  # |Prefix| here you can define a custom prefix
-  Prefix: '&6[&bMy Server&6]&7'
+
+  # This option should only be used if there is a problem with certain functions of the plugin, debug messages will be activated in the console
+  Debug: false
 
     # |ChatFormat Type|
     # [default] use default chat by minecraft 
@@ -33,32 +34,16 @@ Settings:
   # [group] use the chat defined in [Group.<name>] but you need to add the permission that you defined for the group
   ChatFormat-Type: custom
   
-  # |Show-Chat-In-Console| here you can enable or disable the chat to be seen in the console
+  # here you can enable or disable the chat to be seen in the console
   Show-Chat-In-Console: false
     
     # |Default-Color-Message| Here you can define the chat color that is assigned by default to players
     # The color system does not work with (&) but uses a simpler system that is by color names, here below you have the list of available colors
   # Color List: https://jonagamerpro1234.gitbook.io/advancedchat/color-list
   Default-Color-Message: 'white'
-#    
-# | ClearChat |
-ClearChat:
-  
-  # |AutoClear| you can activate the automatic cleaning of the chat according to the number of ticks 
-  AutoClear:
-    
-    # |Enabled| Here you can enable or disable this feature
-    Enabled: true
 
-  # |Default-Start-Tick| Here you can define the first ticks that are executed when starting the server
-  # Wiki: https://jonagamerpro1234.gitbook.io/advancedchat/configurations/tick
-  Default-Start-Tick: 100
-
-  # |Ticks| here you can define the time that the actions are automatically executed [Default | 24000], 24000 tick = 20 min
-  # Wiki: https://jonagamerpro1234.gitbook.io/advancedchat/configurations/tick
-  Tick: 24000
 #
-# | Hooks | Here are all the configurations of the plugin implementations and more
+# Here are all the configurations of the plugin implementations and more
 Hooks:
   
   # |LuckPerms| Here you can configure everything related to LuckPerms and or deactivate or activate functions
@@ -69,31 +54,94 @@ Hooks:
     
     # |Use-Luckperms-In-Groups| When using this option, the groups are discovered with the LuckPerms system
     Use-Luckperms-In-Groups: false
-  
-  # |Vault| Here you can configure everything related to Vault and or deactivate or activate functions
-  Vault:
-    
-    # |Enabled| Here you can enable or disable this feature
-    Enabled: true
-    
-    # |Use-Vault-In-Groups| When using this option, the groups are discovered with the Vault system
-    Use-Vault-In-Groups: true
-  
-  # |DiscordSRV| Here you can define the discord channel where the messages from minecraft to discord are seen
-  # !This characteristic is in the experimental phase!
+
+  # Here you can define the discord channel where the messages from minecraft to discord are seen
   DiscordSRV:
 
-    # |Enabled| Here you can enable or disable this feature
+    # Here you can enable or disable this feature
     Enabled: true
 
-    # |Channel-ID| Here is the id of the channel that is used for the chat
+    # Here is the id of the channel that is used for the chat
     Channel-ID: 'none'
+
+# Here you can customize the chat of your server with the different functions that advancedchat brings
+# For more information you can see the wiki: https://jonagamerpro1234.gitbook.io/advancedchat/
+ChatFormat:
+
+  # Here you can enable or disable this feature
+  Enable: true
+
+  # |Format| Here you define the chat format for all players.
+  Format: '%luckperms_prefix% &b<name> &8&l>'
+
+  # The chat type is to use the three types that exist which are, normal | group | comp(compatibility)
+  # > normal: use the chat customization that the plugin brings
+  # > group:
+  # > comp:
+  Chat-Type: normal
+
+  # This section allows you to modify the hover events in the chat
+  HoverEvent:
+
+    # Here you can enable or disable this feature
+    Enabled: true
+
+    # This section allows you to define the hover text for all the players
+    Hover:
+      - '&6> &aHello &b<name>'
+      - '&6> &e%player_exp_to_level%'
+      - '&6> &dadd more lines like these'
+
+  # |ClickEvent| This section allows you to modify chat click events
+  ClickEvent:
+
+    # Here you can enable or disable this feature
+    Enabled: true
+
+    # |Mode| there are three different modes which are [ command | suggest | url ]
+    Mode: command
+
+    # |Actions| This is where are the available events that you can use
+    Actions:
+
+      # |Command| Clicking on the chat will execute the command defined in the config
+      Command: '/say <name> hello server'
+
+      # |Url| Clicking on the chat opens a link
+      Url: 'https://jonagamerpro1234.gitbook.io/advancedchat/'
+
+      # |Suggest-Command| Clicking on the chat suggests a command that you define in the config
+      Suggest-Command: '/msg <name>'
+
+#
+# | ClearChat |
+ClearChat:
+
+  # is the message that will be sent when cleaning the chat [this does not affect the command for the player only the message from the server]
+  Broadcast: true
+
+  # you can activate the automatic cleaning of the chat according to the number of ticks
+  AutoClear: true
+
+  # With this function you can make the staff is not affected by the clearchat
+  # Permission: advancedchat.clearchat.bypass
+  ByPass-Staff: false
+
+  # |Tick| here you can define the time that the actions are automatically executed [Default | 24000], 24000 tick = 20 min
+  Tick: 24000
+
+  # Here you can define the first ticks that are executed when starting the server
+  Start-Tick: 6000
+
+  # blank lines to broadcast in chat
+  LineClear: 100
+
 #
 # |Command Blocker|
 # |here you can block the commands that you do not want to be used on the server at the moment it does not have the function of [antitabcomplete]
 Command-Blocker:
 
-  # |Enabled| Here you can enable or disable this feature
+  # Here you can enable or disable this feature
   Enabled: true
   
   # |Mute-BlackList| In this list you can define which commands the silenced players cannot use
@@ -119,154 +167,13 @@ Command-Blocker:
     - '/bukkit:?'
     - '/icanhasbukkit'
     - '/about'
-#
-# | Default Format |
-# | This section serves as an emergency backup in case any of the other functions do not work properly. |
-Default-Format: '<&f<name>&f> &f<msg>'
-#
-# | Custom Format |
-# | here you can customize the chat in a general way that affects both ranks, groups, and has all players |
-#
-# Permission: AdvancedChat.Chat.Color.<value>
-# Permission: AdvancedChat.Chat.Color.*
-Custom-Format:
-  
-  # |Format| Here you define the chat format for all players.
-  Format: '%luckperms_prefix% &b<name> &8&l>'
-  
-  # Not Implement
-  Discord-Format: ''
-  
-  # |Type| Here you can find two types that are [ normal | modify ]
-  Type: normal
-  
-  # |HoverEvent| This section allows you to modify the hover events in the chat
-  HoverEvent:
-    
-    # |Enabled| Here you can enable or disable this feature
-    Enabled: true
 
-    # |Hover| This section allows you to define the hover text
-    Hover:
-      - '&6> &aHello &b<name>'
-      - '&6> &e%player_exp_to_level%'
-      - '&6> &dadd more lines like these'
-  
-  # |ClickEvent| This section allows you to modify chat click events
-  ClickEvent:
-
-    # |Enabled| Here you can enable or disable this feature
-    Enabled: true
-    
-    # |Mode| there are three different modes which are [ command | suggest | url ]
-    Mode: command
-    
-    # |Actions| This is where are the available events that you can use
-    Actions:
-      
-      # |Command| Clicking on the chat will execute the command defined in the config
-      Command: '/say <name> hello server'
-      
-      # |Url| Clicking on the chat opens a link
-      Url: 'https://jonagamerpro1234.gitbook.io/advancedchat/'
-      
-      # |Suggest-Command| Clicking on the chat suggests a command that you define in the config
-      Suggest-Command: '/msg <name>'
-#
-# | Groups | !This feature is disabled!
-# | here you can customize the chat of different groups or ranks in a more specific way 
-# | with this format you can add more groups
-# | [!] Groups to work need Vault, the name of the range must be the same as in the permissions plugin
-# 
-# Permission: AdvancedChat.Chat.Color.<value>
-# Permission: AdvancedChat.Chat.Color.*
-Groups:
-  default:
-    
-    # |Format| Here you define the chat format for all players.
-    Format: '&b<name> &8&l>'
-
-    # |Type| Here you can find two types that are [ normal | modify ]
-    Type: normal
-
-    # |HoverEvent| This section allows you to modify the hover events in the chat
-    HoverEvent:
-
-      # |Enabled| Here you can enable or disable this feature
-      Enabled: true
-
-      # |Hover| This section allows you to define the hover text
-      Hover:
-        - '&6> &aHello &b<name>'
-        - '&6> &e%player_exp_to_level%'
-        - '&6> &dadd more lines like these'
-
-    # |ClickEvent| This section allows you to modify chat click events
-    ClickEvent:
-
-      # |Enabled| Here you can enable or disable this feature
-      Enabled: true
-
-      # |Mode| there are three different modes which are [ command | suggest | url ]
-      Mode: command
-
-      # |Actions| This is where are the available events that you can use
-      Actions:
-
-        # |Command| Clicking on the chat will execute the command defined in the config
-        Command: '/say <name> hello server'
-
-        # |Url| Clicking on the chat opens a link
-        Url: 'https://jonagamerpro1234.gitbook.io/advancedchat/'
-
-        # |Suggest-Command| Clicking on the chat suggests a command that you define in the config
-        Suggest-Command: '/msg <name>'
-  admin:
-    
-    # |Format| Here you define the chat format for all players.
-    Format: '&c[Admin] &b<name> &8&l>'
-
-    # |Type| Here you can find two types that are [ normal | modify ]
-    Type: normal
-
-    # |HoverEvent| This section allows you to modify the hover events in the chat
-    HoverEvent:
-
-      # |Enabled| Here you can enable or disable this feature
-      Enabled: true
-
-      # |Hover| This section allows you to define the hover text
-      Hover:
-        - '&6> &aHello &b<name>'
-        - '&6> &e%player_exp_to_level%'
-        - '&6> &dadd more lines like these'
-
-    # |ClickEvent| This section allows you to modify chat click events
-    ClickEvent:
-
-      # |Enabled| Here you can enable or disable this feature
-      Enabled: true
-
-      # |Mode| there are three different modes which are [ command | suggest | url ]
-      Mode: command
-
-      # |Actions| This is where are the available events that you can use
-      Actions:
-
-        # |Command| Clicking on the chat will execute the command defined in the config
-        Command: '/say <name> hello server'
-
-        # |Url| Clicking on the chat opens a link
-        Url: 'https://jonagamerpro1234.gitbook.io/advancedchat/'
-
-        # |Suggest-Command| Clicking on the chat suggests a command that you define in the config
-        Suggest-Command: '/msg <name>'
 #
 # |Filter Chat| 
 # |here you can filter the unwanted words on your server and have a little more control over the chat
 Filter-Chat:
   
-  # |Enabled| Here you can enable or disable this feature
+  # Here you can enable or disable this feature
   Enabled: true
   
   # |Message| here you can define a personalized message that will be sent to the player
