--- a/AdvancedChat 1.6.x Bug Fix/pom.xml
+++ b/AdvancedChat 1.6.x Bug Fix/pom.xml
@@ -63,7 +63,8 @@
         <dependency>
             <groupId>com.github.cryptomorin</groupId>
             <artifactId>XSeries</artifactId>
-            <version>9.1.0</version>
+            <version>9.2.0</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- Mojang -->
@@ -133,12 +134,28 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>dev.triumphteam</groupId>
+            <artifactId>triumph-gui</artifactId>
+            <version>3.1.3</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>net.kyori</groupId>
+            <artifactId>adventure-text-minimessage</artifactId>
+            <version>4.12.0</version>
+        </dependency>
     </dependencies>
 
     <repositories>
         <repository>
             <id>bungeecord-repo</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+        <repository>
+            <id>sonatype-oss-snapshots1</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
         </repository>
         <repository>
             <id>jitpack.io</id>
@@ -204,6 +221,10 @@
                             <pattern>com.cryptomorin.xseries</pattern>
                             <shadedPattern>jss.advancedchat.utils</shadedPattern>
                         </relocation>
+                        <relocation>
+                            <pattern>dev.triumphteam.gui</pattern>
+                            <shadedPattern>jss.advancedchat.libs.triumphteam.gui</shadedPattern>
+                        </relocation>
                     </relocations>
                     <filters>
                         <filter>
@@ -236,7 +257,7 @@
                             <Version>${project.version}</Version>
                         </manifestEntries>
                     </archive>
-                    <!-- <outputDirectory>C:\Users\Alumno\Desktop\LocalHost\Server\1.8\plugins</outputDirectory> -->
+                    <outputDirectory>C:\Users\Alumno\Documents\Server\1.8\plugins</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
