--- a/AdvancedChat 1.6.x Bug Fix/src/main/resources/plugin.yml
+++ b/AdvancedChat 1.6.x Bug Fix/src/main/resources/plugin.yml
@@ -29,6 +29,10 @@ commands:
     description: This command will allow you to unmute a player and they will be able to send messages in chat again
     aliases:
       - unmute
+  AdTest:
+    description: This command will allow you to unmute a player and they will be able to send messages in chat again
+    aliases:
+      - test
 permissions:
   advancedchat.admin:
     description: This permission gives you all plugin permissions
