--- a/Bukkit/src/main/resources/settings.yml
+++ b/Bukkit/src/main/resources/settings.yml
@@ -13,67 +13,73 @@
 # ● Issue Tracker: https://github.com/jonagamerpro1234/AdvancedChat/issues
 # ● Bstast: https://bstats.org/plugin/bukkit/AdvancedChat/8826
 #
+
 Settings:
 
-  # |Config-Version| I would not change anything
+  # I would not change anything
   File-Version: 2
 
-  # | Lang | You can change the language of the plugin messages, if you want to help in the translation of the plugin you can visit the page
+  # You can change the language of the plugin messages, if you want to help in the translation of the plugin you can visit the page
     # Crowdin: https://crowdin.com/project/advancedchat
   Lang: en-US
 
-  # |Debug| This option should only be used if there is a problem with certain functions of the plugin, debug messages will be activated in the console
+  #  This option should only be used if there is a problem with certain functions of the plugin, debug messages will be activated in the console
   Debug: true
 
-  # |Use-Database| You can save the data saved by the plugin in the .data files in a database, and they can be synchronized with various servers
+  # You can save the data saved by the plugin in the .data files in a database, and they can be synchronized with various servers
   Use-Database: false
 
-  # ![Disabled]! |BungeeMode| this function allows you to synchronize all your servers that have the advancedchat plugin
+  # this function allows you to synchronize all your servers that have the advancedchat plugin
   #BungeeMode: false #[Not implemented]
 
   # |Update| This function lets you know if there is a plugin update [Does not disable console messages]
   Update: true
 
-  # |Use-Default-Prefix| if it is true it will use the prefix of the plugin itself, but if it is false it will use the prefix that you define in [Prefix: "my server"]
+  # if it is true it will use the prefix of the plugin itself, but if it is false it will use the prefix that you define in [Prefix: "my server"]
   # if you want to use a custom prefix, this function should be set to [false]
   Use-Default-Prefix: true
 
-  # |Prefix| here you can define a custom prefix
+  #  here you can define a custom prefix
   Prefix: "&6[&bMy Server&6]&7"
 
-  # |Show-Chat-In-Console| here you can enable or disable the chat to be seen in the console
+  # here you can enable or disable the chat to be seen in the console
   Show-Chat-In-Console: false
 
-#
-# | MySQL| [temporarily disabled]
-# |MySql is a database where you can save plugin data remotely, and it can be synchronized with other servers if you are using BungeeCord
+  # This function allows you to select the color format that you want to use for the personalization of the messages, in the color format there are two options which are:
+  # |legacy| The legacy format will use the old color system which is & and will also use a variable that only works this way, but you can still use gradient and hex colors.
+  # |minimessage| The minimessage format is a more advanced format that works by tags which allow a better customization of the message, for more information you can visit the MiniMessage site:
+  # https://docs.advntr.dev/minimessage/format.html
+  ColorFormat: minimessage
+
+
+# [temporarily disabled]
+# MySql is a database where you can save plugin data remotely, and it can be synchronized with other servers if you are using BungeeCord
 MySQL:
 
-  # |Table| this is where you will find the name of the table that will be created or used to obtain the data
+  # this is where you will find the name of the table that will be created or used to obtain the data
   # [Note]: it is not recommended to change this
   Table: "advancedchat_data"
 
-  # | Driver | this is where you will find the name of the table that will be created or used to obtain the data
+  #  this is where you will find the name of the table that will be created or used to obtain the data
   # [Note]: it is not recommended to change this
   Driver: ""
 
-  # | Host | this is where you should put the database host
+  # this is where you should put the database host
   Host: "localhost"
 
-  # | Port | this is where you should put the database port
+  # this is where you should put the database port
   Port: "3306"
 
-  # | Database | this is where you should put the name of the database
+  # this is where you should put the name of the database
   Database: "advancedchatDB"
 
-  # | Username | this is where you should put the database username
+  # this is where you should put the database username
   Username: "root"
 
-  # | Password | this is where you should put the database password
+  # this is where you should put the database password
   Password: "none"
 
-#
-# | Hooks | Here are all the configurations of the plugin implementations and more
+#  Here are all the configurations of the plugin implementations and more
 Hooks:
 
   # |LuckPerms| Here you can configure everything related to LuckPerms and or deactivate or activate functions
@@ -121,7 +127,7 @@ Hooks:
 # | ChatFormat |
 ChatFormat:
 
-  # |Enabled| Here you can enable or disable this feature
+  # Here you can enable or disable this feature
   Enabled: true
 
   # |Chat-Type|
@@ -131,10 +137,10 @@ ChatFormat:
     # [group] use the chat defined in the group found inside the [groups.yml] file
   Chat-Type: normal
 
-  # | Format-Type |
+  # | Format-Type | [Disable]
     # [normal] It is the normal format to use the plugin's, and it will use the plugin's own method to send the message, it is possible that the plugin is incompatible with other plugins
     # [json] The json format will allow a better customization of the chat and will use another method to send the messages. It is not recommended to use this format if you don"t know how to use json!
-  Format-Type: normal
+    # Format-Type: normal
 
   # |Format| Here you define the chat format for all players.
   Format: "&b{player_name} &8> {message_chat}"
@@ -160,25 +166,25 @@ ChatFormat:
       - "&6> &e%player_exp_to_level%"
       - "&6> &dadd more lines like these"
 
-  # |ClickEvent| This section allows you to modify chat click events
+  # This section allows you to modify chat click events
   ClickEvent:
 
-    # |Enabled| Here you can enable or disable this feature
+    # Here you can enable or disable this feature
     Enabled: true
 
-    # |Mode| there are three different modes which are [ command | suggest | url ]
+    # there are three different modes which are [ command | suggest | url ]
     Mode: command
 
-    # |Actions| This is where are the available events that you can use
+    # This is where are the available events that you can use
     Actions:
 
-      # |Command| Clicking on the chat will execute the command defined in the config
+      # Clicking on the chat will execute the command defined in the config
       Command: "/say <name> hello server"
 
-      # |Url| Clicking on the chat opens a link
+      # Clicking on the chat opens a link
       Url: "https://jonagamerpro1234.gitbook.io/advancedchat/"
 
-      # |Suggest-Command| Clicking on the chat suggests a command that you define in the config
+      # Clicking on the chat suggests a command that you define in the config
       Suggest-Command: "/msg <name>"
 
   # |Private-Message|
@@ -193,47 +199,45 @@ ChatFormat:
     # |Receive-Server-Format|
     Receive-Server-Format: "&6[&bServer&6] &a[R] &8-> <receive_name>&8: &7<msg>"
 
-  # |Debug-Format| It is a chat that will be activated when the configuration contains an error
+  #  It is a chat that will be activated when the configuration contains an error
   Debug-Format: "&b[&cError in Config&b] &f<&f<player>&f> &f<message>"
 
-#
 # | ClearChat |
 ClearChat:
 
-  # |Broadcast| is the message that will be sent when cleaning the chat [this does not affect the command for the player only the message from the server]
+  # is the message that will be sent when cleaning the chat [this does not affect the command for the player only the message from the server]
   Broadcast: true
 
-  # |AutoClear| you can activate the automatic cleaning of the chat according to the number of ticks [Default: true]
+  #  you can activate the automatic cleaning of the chat according to the number of ticks [Default: true]
   AutoClear: true
 
-  # |ByPass-Staff| With this function you can make the staff is not affected by the clearchat [AdvancedChat.ClearChat.Bypass]
+  #  With this function you can make the staff is not affected by the clearchat [AdvancedChat.ClearChat.Bypass]
   ByPass-Staff: false
 
-  # |Tick| here you can define the time that the actions are automatically executed [Default | 24000], 24000 tick = 20 min
+  #  here you can define the time that the actions are automatically executed [Default | 24000], 24000 tick = 20 min
   Tick: 24000
 
-  # |Default-Start-Tick| Here you can define the first ticks that are executed when starting the server
+  #  Here you can define the first ticks that are executed when starting the server
   # Wiki: https://jonagamerpro1234.gitbook.io/advancedchat/configurations/tick
   Default-Start-Tick: 6000
 
-  #blank lines to broadcast in chat
+  # blank lines to broadcast in chat
   LineClear: 100
 
-#
 # | Command Blocker |
 # |here you can block the commands that you do not want to be used on the server at the moment it does not have the function of [antitabcomplete]
 Command-Blocker:
 
-  # |Enabled| Here you can enable or disable this feature
+  # Here you can enable or disable this feature
   Enabled: true
 
-  # |Chat| here you will find all the command block functions for chat
+  #  here you will find all the command block functions for chat
   Chat:
 
-    # |Disable-Commands| By disabling this feature, muted players will be able to use the listed commands [Default: true]
+    # By disabling this feature, muted players will be able to use the listed commands [Default: true]
     Disable-Commands: true
 
-    # |Command-List| In this list you can define which commands cannot be used by players in general including your server staff
+    # In this list you can define which commands cannot be used by players in general including your server staff
     Command-List:
       - "/plugins"
       - "/pl"
@@ -246,20 +250,20 @@ Command-Blocker:
       - "/bukkit:ver"
       - "/bukkit:?"
 
-  # |Mute| here you will find all the command block functions for muted players
+  # here you will find all the command block functions for muted players
   Mute:
 
-    # |Disable-Commands| By disabling this feature, muted players will be able to use the listed commands [Default: true]
+    # By disabling this feature, muted players will be able to use the listed commands [Default: true]
     Disable-Commands: true
 
-    # |Command-List| In this list you can define which commands the silenced players cannot use
+    # In this list you can define which commands the silenced players cannot use
     Command-List:
       - "/tell"
       - "/me"
       - "/say"
       - "/msg"
 
-#
+
 # | TabComplete |
 TabComplete:
 
@@ -279,7 +283,7 @@ TabComplete:
       - "Say"
       - "List"
 
-#
+
 # |Filter Chat|
 # |here you can filter the unwanted words on your server and have a little more control over the chat
 #
@@ -292,11 +296,11 @@ Filter-Chat:
 
   # |Message| here you can define a personalized message that will be sent to the player
   Message: "&eyou cannot use this word, it is blocked!"
+
 #
-# | Mention |
 Mention:
 
-  # |Enabled| Here you can enable or disable this feature
+  # Here you can enable or disable this feature
   Enabled: true
 
   # |Send-Format|
@@ -305,19 +309,18 @@ Mention:
   # |Receive-Format|
   Receive-Format: "&b[&eR&b]&8: &e[&a<name>&e] &9-> &d<name>"
 
-  # |Sound| In this section you can configure the sound of the mentions
+  #  In this section you can configure the sound of the mentions
   Sound:
 
-    # |Name| This is the name of the sound you will hear when it is mentioned to you in chat.
+    # This is the name of the sound you will hear when it is mentioned to you in chat.
     Name: BLOCK_NOTE_BLOCK_PLING
 
-    # |Pitch| This is the pitch of the sound that you will hear when mentioned in the chat
+    # This is the pitch of the sound that you will hear when mentioned in the chat
     Pitch: 0.5
 
-    # |Vol| This is the volume of the sound that you will hear when the chat mentions it
+    #  This is the volume of the sound that you will hear when the chat mentions it
     Volume: 10
 
-#
 # | PlayerSettings |
 PlayerSettings:
 
@@ -325,21 +328,20 @@ PlayerSettings:
 
   DefaultGroup: "default"
 
-#
 #  | ChatLog |
 ChatLog:
 
   Chat:
 
-    # |Enabled| Here you can enable or disable this feature
+    # Here you can enable or disable this feature
     Enabled: true
 
   Commands:
 
-    # |Enabled| Here you can enable or disable this feature
+    # Here you can enable or disable this feature
     Enabled: true
 
-    #add ignore command add in the log file
+    # commands within the list are ignored and the record is not logged
     BlackList:
       - "/?"
 #
