--- a/AdvancedChat 1.6.x Bug Fix/pom.xml
+++ b/AdvancedChat 1.6.x Bug Fix/pom.xml
@@ -96,13 +96,12 @@
                             <Version>${project.version}</Version>
                         </manifestEntries>
                     </archive>
-                    <outputDirectory>C:\Users\Alumno\Documents\Server\1.8\plugins</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
         <resources>
             <resource>
-                <directory>../../../Desktop/00/src/main/resources</directory>
+                <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
         </resources>
