--- a/AdvancedChat 1.6.x Bug Fix/src/main/resources/config.yml
+++ b/AdvancedChat 1.6.x Bug Fix/src/main/resources/config.yml
@@ -4,11 +4,11 @@
 #  / ___ / /___    Version ${project.version}
 # /_/  |_\____/    Thanks for using AdvancedChat <3
 #
-# ● AdvancedChat is an easy to use plugin that will help you customize the chat on your server to make it look its best. It will also have a customization system by groups and among other functions more...
+# ● AdvancedChat is an easy-to-use plugin that will help you customize the chat on your server to make it look its best. It will also have a customization system by groups and among other functions more...
 #
 # ● Spigot: https://www.spigotmc.org/resources/advancedchat-1-7-x-1-17-x.83889/
 # ● Songoda: https://songoda.com/marketplace/product/advancedchat-chat-related.542
-# ● Wiki [Working Progress]: https://jonagamerpro1234.gitbook.io/advancedchat/
+# ● Wiki [Work in progress]: https://jonagamerpro1234.gitbook.io/advancedchat/
 # ● Discord: https://discord.gg/c5GhQDQCK5
 # ● Issue Tracker: https://github.com/jonagamerpro1234/AdvancedChat/issues
 # ● Bstast: https://bstats.org/plugin/bukkit/AdvancedChat/8826
@@ -21,7 +21,7 @@ Settings:
   Config-Version: 2
   
   # The notification of updates will be disabled if it is false this only disables the notifications when entering the server,
-  # if it is true a notification will be sent if there is an update available
+  # if it is true, a notification will be sent if there is an update available
   # Permission: advancedchat.update
   Update: true
 
@@ -61,7 +61,7 @@ Hooks:
     # Here you can enable or disable this feature
     Enabled: true
 
-    # Here is the id of the channel that is used for the chat
+    # Here is the id of the channel used for the chat
     Channel-ID: 'none'
 
 # Here you can customize the chat of your server with the different functions that advancedchat brings
@@ -98,7 +98,7 @@ ChatFormat:
     # Here you can enable or disable this feature
     Enabled: true
 
-    # |Mode| there are three different modes which are [ command | suggest | url ]
+    # |Mode| there are three different modes that are [ command | suggest | url ]
     Mode: command
 
     # |Actions| This is where are the available events that you can use
@@ -123,7 +123,7 @@ ClearChat:
   # you can activate the automatic cleaning of the chat according to the number of ticks
   AutoClear: true
 
-  # With this function you can make the staff is not affected by the clearchat
+  # With this function, you can make the staff is not affected by the clearchat
   # Permission: advancedchat.clearchat.bypass
   ByPass-Staff: false
 
@@ -153,7 +153,8 @@ Command-Blocker:
     - '/minecraft:me'
     - '/minecraft:tell'
 
-  # |BlackList| In this list you can define which commands cannot be used by players in general including your server staff [this function may change in future updates]
+  # |BlackList| In this list you can define which commands cannot be used by players in general,
+  # including your server staff [this function may change in future updates]
   BlackList:
     - '/plugins'
     - '/pl'
