--- a/AdvancedChatOld/src/main/resources/messages.yml
+++ b/AdvancedChatOld/src/main/resources/messages.yml
@@ -18,6 +18,64 @@ UsageMainCommand: "&7Use &9/advancedchat &ehelp &7for more information about the
 UsageMsgCommand: "&7Use &9/msg &e<player> &d<message> &7to send a private message to another player"
 Reload: "&aReload Complete"
 
+AdvancedChat:
+  Alert-Update: '&aThere is a new version available for download click to copy the link'
+  Alert-Update-Hover: '&6Click on this message to copy the link'
+  Depend-Plugin: '&cCannot enable packet features!, Required plugin missing:'
+  Error-MySql: '&cCould not find the data, check the config &e[&bPath = Database&e]'
+  ClearChat-Server: '&7The chat has been cleaned'
+  ClearChat-Player: '&7The chat has been cleaned by &b[&e<name>&b]'
+  ClearChat-Staff: '&c{Staff} &7The chat has been cleaned by &b[&e<name>&b]'
+  No-Permission: '&cYou dont have permission to do that!'
+  No-Permission-Hover: '&7Ask the server &b[&cowner &7or an &eadministrator&b] &7for help for more information'
+  Error-Args: '&cUnknown Arguments'
+  Error-Console: '&cThis command is only available to players'
+  Reload: '&aReload Completed'
+  Help-Mute: '&7Use &b/Mute &e<player> &7to mute a player'
+  Help-UnMute: '&7Use &b/UnMute &e<player> &7to unmute a player.'
+  Help-Use-Cmd: '&7Use &b/AdvanceChat &8| &9/Ac &6Help &7show more information of plugin'
+  Help-Msg:
+    - '&5> &b/AdvancedChat &8| &9/Ac &7these are the variants of the main plugin command'
+    - '&5> &b/AdvancedChat &6help &7show this same message'
+    - '&5> &b/AdvancedChat &6reload &7reload the plugin files'
+    - '&5> &b/AdvancedChat &6info &7shows information about the plugin'
+    - '&5> &b/AdvancedChat &6color &e<player name> &9set &a<color name> &7open color gui'
+    - '&5> &b/AdvancedChat &6player &e<player name> &7open the player settings'
+    - '&5> &b/AdvancedChat &6gradient &e<player name> &9set &a<color|value> &d<first|second> &7open the gradient gui'
+    - '&5> &b/Mgs &e<player name> &7send of private message '
+    - '&5> &b/AdvancedChat &6settings &e<option> &9<true|false|value> &7open the settings gui'
+    - '&5> &b/Mute &e<player name> &7mute the player'
+    - '&5> &b/UnMute &e<player name> &7demute the player'
+    - '&5> &b/ClearChat &8| &9/Cc &7clean the chat when it is very full or necessary'
+  Mute-Bypass: '&eThis player cannot be muted because he is bypassed'
+  Mute-Player: '&e[&b<name>&e] &cis now muted!'
+  UnMute-Player: '&e[&b<name>&e] &ais now unmuted!'
+  Player-Is-Not-Mute: '&cThis player is not muted'
+  Player-Is-Mute: '&cThis player is already muted'
+  Alert-Mute: '&e[!] &cright now you are muted'
+  No-Online-Player: '&cThis player does not exist or is not connected!'
+  No-Use-Command: '&e[&b!&e] &cYou can t use that command! &b[&c<cmd>&b]'
+  No-Use-Command-Mute: '&e[&b!&e]You cannot use that command while it is muted! &b[&c<cmd>&b]'
+  Empty-Msg: '&c[!] &7write a message to send it'
+  Help-Msg-Use: '&7Use &b/Msg &6<player> &e<message> &7To send a private message to another player'
+  Alert-Disable-Chat: '&cyou must activate the chat to be able to send messages'
+  Alert-Disable-Mention: '&cthis player has mentions disabled'
+  Alert-Disable-Msg: '&cThis player cannot receive private messages'
+  Logger:
+    OutLine: '{default}-> &e[&bOUTLINE&e]&7'
+    Info: '{default}-> &e[&9INFO&e]&7'
+    Error: '{default}-> &e[&cERROR&e]&7'
+    Success: '{default}-> &e[&aSUCCESS&e]&7'
+    Warning: '{default}-> &e[&cWARNING&e]&7'
+    Debug: '{default}-> &e[&dDEBUG&e]&7'
+    Chat: '{default}-> &e[&aCHAT&e]&7'
 
 
+# No touch
 File-Version: 1
+#
+# This is the end of the file ... [-_-] more things to come
+#
+# ● Message File
+# ● Version 1.7.0
+#
