--- a/AdvancedChatOld/src/main/resources/settings.yml
+++ b/AdvancedChatOld/src/main/resources/settings.yml
@@ -4,17 +4,17 @@
 #  / ___ / /___    Version 1.7.0-b20
 # /_/  |_\____/    Thanks for using AdvancedChat <3
 #
-# ● AdvancedChat is an easy to use plugin that will help you customize the chat on your server to make it look its best. It will also have a customization system by groups and among other functions more...
+# ● AdvancedChat is an easy-to-use plugin that will help you customize the chat on your server to make it look its best. It will also have a customization system by groups and among other functions more...
 #
 # ● Spigot: https://www.spigotmc.org/resources/advancedchat-1-7-x-1-17-x.83889/
 # ● Songoda: https://songoda.com/marketplace/product/advancedchat-chat-related.542
-# ● Wiki [Working Progress]: https://jonagamerpro1234.gitbook.io/advancedchat/
+# ● Wiki [Work in progress]: https://jonagamerpro1234.gitbook.io/advancedchat/
 # ● Discord: https://discord.gg/c5GhQDQCK5
 # ● Issue Tracker: https://github.com/jonagamerpro1234/AdvancedChat/issues
 # ● Bstast: https://bstats.org/plugin/bukkit/AdvancedChat/8826
 
 # The notification of updates will be disabled if it is false this only disables the notifications when entering the server,
-# if it is true a notification will be sent if there is an update available
+# if it is true, a notification will be sent if there is an update available
 # Permission: advancedchat.update
 Update: true
 
