--- a/AdvancedChatOld/src/main/resources/messages.yml
+++ b/AdvancedChatOld/src/main/resources/messages.yml
@@ -4,7 +4,7 @@
 #  / ___ / /___    Version 1.7.0
 # /_/  |_\____/    Thanks for using AdvancedChat <3
 #
-# ● A simple plugin that helps you customize your server chat to make it look better also provides a customizable group chat system and among other more features ...
+# ● , A simple plugin that helps you customize your server chat to make it look better also provides a customizable group chat system and among other more features ...
 #
 # ● Translation by jonagamerpro1234
 # ● Translation of messages from AdvancedChat
