--- a/AdvancedChatOld/pom.xml
+++ b/AdvancedChatOld/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>advancedchatold</artifactId>
-    <version>1.7.0-b22</version>
+    <version>1.7.0-b25</version>
 
     <name>AdvancedChatOld</name>
     <description>a simple plugin that helps you customize your server chat to make it look better also brings a
@@ -56,7 +56,6 @@
             <version>8.0.28</version>
         </dependency>
 
-
         <!-- Spigot -->
         <dependency>
             <groupId>org.spigotmc</groupId>
@@ -95,6 +94,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>3.0.2</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- ProtocolLib -->
         <dependency>
@@ -158,7 +163,7 @@
         <dependency>
             <groupId>de.tr7zw</groupId>
             <artifactId>item-nbt-api</artifactId>
-            <version>2.10.0</version>
+            <version>2.13.0</version>
             <scope>compile</scope>
         </dependency>
 
@@ -263,7 +268,7 @@
                             <shadedPattern>jss.advancedchat.lib.xseries</shadedPattern>
                         </relocation>
                         <relocation>
-                            <pattern>de.tr7zw.nbtapi</pattern>
+                            <pattern>de.tr7zw.changeme.nbtapi</pattern>
                             <shadedPattern>jss.advancedchat.lib.nbtapi</shadedPattern>
                         </relocation>
                         <relocation>
@@ -277,6 +282,10 @@
                         <relocation>
                             <pattern>net.kyori</pattern>
                             <shadedPattern>jss.advancedchat.lib.kyori</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.bstats</pattern>
+                            <shadedPattern>jss.advancedchat.lib.bstats</shadedPattern>
                         </relocation>
                     </relocations>
                     <filters>
